--- a/package.json
+++ b/package.json
@@ -15,6 +15,14 @@
     "express": "^4.0.0",
     "mocha": "^3.3.0"
   },
+  
+  "dependencies": {
+    "cool-ascii-faces": "^1.3.4",
+    "ejs": "^2.5.6",
+    "express": "^4.15.2",
+    "pg": "^7.4.3"
+  },
+  
   "engines": {
     "ejs": "2.5.5"
   },
